css 애플페이지 만들기

--- a/web_basic/html/css_study/css/notice.css
+++ b/web_basic/html/css_study/css/notice.css
@@ -105,7 +105,12 @@ ul {
     font-size: 48px;
     
 }
-
+.color-text {
+    margin-left: 1.6px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #1d1d1f;
+}
 .product-select-list {
     position: sticky;
     top: 0px;
@@ -178,15 +183,13 @@ ul {
 
  .product-container {
     margin-left: 70px;
-    border:  1px solid #dbdbdb;
     width: 280px;
-    height: 600px;
  }
  .product-container:nth-last-of-type(1) {
     margin: 0;
  }
 
- .product-container {
+ .product-image-container {
     display: flex;
     justify-content: center;
     align-items:  center;
@@ -197,3 +200,97 @@ ul {
  .product-image-container img{
     width: 280px;
  }
+ .color-radio-group {
+    display: flex;
+ }
+ 
+ .color-radio-group input[type=radio] {
+    display: none;
+ }
+
+
+ .color-radio-group input[type=radio] + label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
+ }
+
+ .color-radio-group input[type=radio] + label:hover {
+    border: 2px solid #dbdbdb;
+}
+
+.color-radio-group input[type=radio]:checked + label {
+    border: 2px solid #0066cc;
+    margin: 1.6px;
+}
+ .color-radio-group input[type=radio] + label .color-circle {
+    border-radius: 50%;
+    height: 24px;
+    width: 24px;
+ }
+
+ .c1 {
+    background-color: #2e3641;
+ }
+
+ .c2 {
+    background-color: #f0e5d3
+ }
+ .c3 {
+    background-color: #7d7e80;
+ }
+ .c4 {
+    background-color: #e3e4e6;
+ }
+
+ .product-detail-info {
+    margin: 20px 0px;
+}
+.cpu-image {
+    padding-bottom: 10px;
+    width: 51px;
+    height: 61px;
+    overflow: hidden;
+}
+
+.cpu-image img {
+    width: 51px;
+}
+
+.product-simple-info {
+    font-size: 24px;
+    color: #1d1d1f;
+    font-weight: 600;
+}
+
+.product-sepcs-list {
+    margin-top: 20px;
+}
+
+.product-sepcs-list li {
+    margin-top: 5.6px;
+    font-size: 12px;
+}
+
+.product-price {
+    font-size: 24px;
+    font-weight: 600;
+    color: #1d1d1f;
+}
+
+.product-price-monthly-plan {
+    padding-top: 6px;
+    font-size: 14px;
+    color: #86868b;
+}
+
+.monthly-plan-link {
+    padding-top: 6px;
+    font-size: 14px;
+    color: #0066cc;
+}
